--- a/frontend/app/src/Components/landingPage3.css
+++ b/frontend/app/src/Components/landingPage3.css
@@ -1,7 +1,7 @@
 
-.column{
+.d-flex .column{
     position: relative;
-    display:inline-flex;
+    display: flex;
 }
 
 .column .LRounded1{
